Added minor CSS Styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Coding quiz</h1>
-      <button id="start-button">Start</button>
+      <button id="start-button" class = "button">Start</button>
       <div class = "timercount">60</div>
       <div> Second(s) left.</div>
     </header>
@@ -19,10 +19,10 @@
         <section id = "sectionbox">
           <div class = "question">Question Placeholder</div>
             <ol>
-              <li><button class = "answer1" >Answer1</button></li>
-              <li><button class = "answer2" >Answer2</button></li>
-              <li><button class = "answer3" >Answer3</button></li>
-              <li><button class = "answer4" >Answer4</button></li>
+              <li><button class = "answer1 button" >Answer1</button></li>
+              <li><button class = "answer2 button" >Answer2</button></li>
+              <li><button class = "answer3 button" >Answer3</button></li>
+              <li><button class = "answer4 button" >Answer4</button></li>
             </ol>
 
             <div class = "score"><span id = "currentScore">0</span> Points</div>
