Edited style.css for some minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Coding quiz</h1>
-      <button id="start-button" class = "button">Start</button>
+      <button id="start-button" class = "button center">Start</button>
       <div class = "timercount">60</div>
       <div> Second(s) left.</div>
     </header>
