--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Coding Quiz</title>
   </head>
   <body>
     <header>
       <h1>Coding quiz</h1>
-      <button id="start-button" class = "button center">Start</button>
-      <div class = "timercount">60</div>
-      <div> Second(s) left.</div>
+
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active"><button id="start-button">Start</button></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active"><button id="highscore-button">View Highscores</button></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active"><button id="clear-button">Clear Highscores</button></a>
+        </li>
+      </ul>
+
+        <article class = "center">
+          <div class = "timercount inline">60</div>
+          <div class = "inline"> Second(s) left.</div>
+        </article>
+
     </header>
 
     <main>
@@ -28,8 +44,10 @@
             <div class = "score"><span id = "currentScore">0</span> Points</div>
         </section>
 
-        <section id = "highscore">
-          <div>Your total score was <span id = "totalScore" >0</span> Points</div>
+        <section id = "scoreBoard">
+          <div>Your current score is:  <span id = "totalScore" >0</span> Point(s)</div>
+          <h2>HIGH SCORES</h2>
+          <ol id ="highScores"></ol>
 
         </section>
 
